--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
         @media screen and (max-width: 1000px) {
         
             
-            input {
+            .container >  input {
                 width: 70%;
                 height: 7%;
-                margin: 10px;
+              
                 border: none;
                 border-bottom: 1px solid #000000;
                 text-align: center;
-                font-size: 1.2rem;
+                font-size: 1.5rem;
+                
             }
       
             .container > img{
@@ -18,6 +19,39 @@
              
                 border-radius: 70%;
             }
+               
+            .container > #meu-formulario {
+            width: 70%;
+            margin: 0 auto;
+            padding: 20px;
+            border: 4px solid #000000;
+            border-radius: 15px;
+            background-color: #f9f9f9;
+            font-size: 1.8rem;
+            height: 30%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+        
+    
+        input:active{
+            border: none;
+            border-bottom: 1px solid #000000;
+        }
+        .container >  button {
+            background-color: #007BFF;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 20px;
+            cursor: pointer;
+            width: 70%;
+            height: 5%;
+            margin: 10px;
+            font-size: 1.2rem;
+        }
            
         }
 
@@ -63,6 +97,7 @@
             display: block;
             margin-top: 10px;
             font-weight: bold;
+            margin-bottom: 10px;
         }
         
         input {
